[gd_scene load_steps=7 format=3 uid="uid://b20e8kh6v6fc0"]

[ext_resource type="Script" path="res://shark.gd" id="1_qmmix"]
[ext_resource type="Texture2D" uid="uid://cgd2ekpq1u484" path="res://icon.svg" id="2_xqthd"]

[sub_resource type="GDScript" id="GDScript_7oxfd"]
script/source = "extends Area2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="CircleShape2D" id="CircleShape2D_oum8q"]
radius = 381.525

[sub_resource type="CircleShape2D" id="CircleShape2D_ewvbl"]
radius = 73.7631

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mehqs"]
radius = 48.0
height = 194.0

[node name="shark" type="CharacterBody2D" node_paths=PackedStringArray("player")]
position = Vector2(368, -416)
script = ExtResource("1_qmmix")
movespeed = 50
player = NodePath("")

[node name="sight" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = SubResource("GDScript_7oxfd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="sight"]
shape = SubResource("CircleShape2D_oum8q")

[node name="Shark" type="Sprite2D" parent="."]
texture = ExtResource("2_xqthd")

[node name="killzone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
shape = SubResource("CircleShape2D_ewvbl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.55535
shape = SubResource("CapsuleShape2D_mehqs")

[connection signal="area_entered" from="sight" to="." method="_on_sight_area_entered"]
[connection signal="area_exited" from="sight" to="." method="_on_sight_area_exited"]
[connection signal="area_entered" from="killzone" to="." method="_on_killzone_area_entered"]
